crates/plotnik-lib/tests/03-analyze/empty_constructs/nested_empty_alternation.txt
Q = (foo [])
==== diagnostics ====
error: empty `[]` matches nothing
 --> query.ptk:1:10
  |
1 | Q = (foo [])
  |          ^^
  |
help: alternations must contain at least one branch
==== symbols ====
